--- a/index.html
+++ b/index.html
@@ -1044,6 +1044,7 @@
 <script src="./js/blocs.js?653"></script>
 <script src="./js/lazysizes.min.js" defer></script>
 <script src="./js/main.js" ></script>
+<!-- <script src="./js/test.js" ></script> -->
 <script src="./node_modules/chart.js/dist/Chart.js" ></script>
 <!-- Additional JS END -->
 
